fix: DEV-3467: Change border color to being visible when item is selected

--- a/src/components/TopBar/Annotations.styl
+++ b/src/components/TopBar/Annotations.styl
@@ -4,7 +4,7 @@
   position relative
 
   &__draft
-    border-bottom 1px solid rgba(0,0,0,0.1)
+    border-bottom 1px solid #bdbdbd
 
   &__list
     top calc(100% - 1px)
